# opencl-language-server

./: .gitignore  .gitmodules  CMakeLists.txt  DEV.md  LICENSE  LICENSE.txt  README.md  ReadMe.md  build.py  conanfile.py  conanfile.txt  licenses.py  requirements.txt
.github/actions/cleanup-apple-signing/: action.yml
.github/actions/setup-apple-signing/: action.yml
.github/actions/sign-and-notarize/: action.yml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  release-linux.yml  release-macos.yml  release-windows.yml  release.yml
_dev/: build.md
build-support/: opencl-language-server.entitlements
builder/: __init__.py  command.py
builder/actions/: __init__.py  action.py  all.py  build.py  conan_create.py  conan_install.py  configure.py  defaults.py
builder/controllers/: __init__.py  build.py  conan_create.py  conan_install.py  configure.py  utils.py
builder/controllers/wrappers/: __init__.py  cmake.py  conan.py  execute.py  wrapper.py
include/: clinfo.hpp  commands.hpp  completion.hpp  declaration.hpp  definition.hpp  device.hpp  diagnostics.hpp  json.hpp  jsonrpc.hpp  location.hpp  log.hpp  lsp.hpp  opencl.hpp  oslogger.hpp  translation.hpp  typedef.hpp  utils.hpp  version.hpp.in
lib/logger/include/: glogger.hpp
libclang/: CMakeLists.txt  libclang-urls.txt
profiles/: darwin.common  darwin.debug.armv8  darwin.debug.x86_64  darwin.default  darwin.release.armv8  darwin.release.x86_64  linux.common  linux.common.armv8  linux.debug.armv8  linux.debug.x86_64  linux.default  linux.release.armv8  linux.release.x86_64  windows.common  windows.debug.armv8  windows.debug.x86_64  windows.default  windows.release.armv8  windows.release.x86_64
res/: CMakeLists.txt
src/: clinfo.cpp  commands.cpp  completion.cpp  declaration.cpp  definition.cpp  diagnostics.cpp  jsonrpc.cpp  location.cpp  log.cpp  lsp.cpp  main.cpp  translation.cpp  typedef.cpp  utils.cpp
test_package/: conanfile.py
tests/: CMakeLists.txt  completion-tests.cpp  declaration-tests.cpp  definition-tests.cpp  diagnostics-parser-tests.cpp  diagnostics-tests.cpp  jsonrpc-tests.cpp  lsp-event-handler-tests.cpp  main.cpp  typedef-tests.cpp  utils-tests.cpp
tests/fixtures/: kernel.cl
tests/mocks/: clinfo-mock.hpp  completion-mock.hpp  declaration-mock.hpp  definition-mock.hpp  diagnostics-mock.hpp  exit-handler-mock.hpp  generator-mock.hpp  jsonrpc-mock.hpp  translation-mock.hpp  typedef-mock.hpp
